--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npx nodemon index.js -e js,css,pug"
+    "dev": "pnpm nodemon index.js -e js,css,pug"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
