--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "pug": "^3.0.2"
