--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Camellia Article Writer",
+  "name": "camellia-article-writer",
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
@@ -7,10 +7,10 @@
     "dev": "pnpm nodemon index.js -e js,css,pug"
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.16",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "pug": "^3.0.2"
   }
 }
