--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "pug": "^3.0.2"
+    "nodemon": "^2.0.22"
   }
 }
